# Server-Starter-rs

./: Cargo.toml  javaVersion.json  java_version.json
src/: download_helper.rs  downloader.rs  java_config.rs  main.rs
