[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
eframe = "0.23.0"
egui = "0.23.0"
env_logger = "0.10.0"
egui_extras = "0.23.0"
poll-promise = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.109"
